fix: #WB2-1487, fix attachment text truncate in Note Modal

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -13,7 +13,7 @@
 
 #NoteModal .multimedia-section {
   width: 100%;
-  min-height: 178px;
+  min-height: 120px;
   border-radius: 16px;
   border: 1px solid #f2f2f2;
   gap: 8px;
